- [Fix] Server crashing